--- a/client/src/components/GamesContainer/gamesC.css
+++ b/client/src/components/GamesContainer/gamesC.css
@@ -31,6 +31,12 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 1284.75px;
+  height: 900px;
   z-index: -2;
+}
+
+@media (max-width: 800px) {
+  #gamePageBackground {
+    height: 950.75px;
+  }
 }
